[package]
name = "template-matching"
version = "0.1.1"
edition = "2021"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>"]

description = "GPU-accelerated template matching"
license = "MIT"
readme = "README.md"
repository = "https://github.com/urholaukkarinen/template-matching"
homepage = "https://github.com/urholaukkarinen/template-matching"
keywords = ["gpu", "image"]
categories = ["computer-vision"]

[dependencies]
wgpu = "0.16"
pollster = "0.3"
bytemuck = { version = "1.13", features = ["derive"] }
image = { version = "0.24", optional = true }
futures-intrusive = "0.5"

[dev-dependencies]
image = "0.24"
imageproc = "0.23"

[features]
default = ["image"] 
image = ["dep:image"]
